fix error in complex selectors detecting

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,8 @@
 
     <div id="mocha"></div>
 
+    <div class="test"></div>
+
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../fnd.js"></script>
