added ability to pass array of nodes as second argument, and version bump

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 
     <div id="mocha"></div>
 
-    <div class="test"></div>
+    <div class="testDiv"></div>
 
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
