add [attr] selectors support, close #1

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,8 @@
 
     <div id="mocha"></div>
 
-    <div class="testDiv"></div>
+    <div class="testDiv" data-test="test"></div>
+    <x-tag></x-tag>
 
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
