tests and docs for fnd.evt

--- a/test/index.html
+++ b/test/index.html
@@ -12,12 +12,15 @@
 
     <div id="mocha"></div>
 
-    <div class="testDiv" data-test="test"></div>
+    <div class="testDiv" data-test="test">
+        <span title="Don't mind me, I'm but a humble test span">:)</span>
+    </div>
     <x-tag></x-tag>
 
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../fnd.js"></script>
+    <script src="../fnd.evt.js"></script>
     <script src="./test.js"></script>
 </body>
 </html>
