--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
 
     <div class="testDiv" data-test="test">
         <span title="Don't mind me, I'm but a humble test span">:)</span>
+        <strong class="cls" title="I'm test em. Don't me too!"></strong>
     </div>
     <x-tag></x-tag>
 
